msmq/2.0/modules/ROOT/pages/msmq-connector-reference.adoc
= Microsoft MSMQ Connector Reference - Mule 4
:page-aliases: connectors::msmq/msmq-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Microsoft MSMQ Connector v2.0

Release Notes: xref:release-notes::connector/msmq-connector-release-notes-mule-4.adoc[Microsoft MSMQ Connector Release Notes]

== MSMQ Receiver Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| Msmq
 | The connection Types that can be provided to this configuration. | |x
| Message Count a| Number |  |  |x
| Polling Frequency a| Number |  The polling frequency in milliseconds to pull messages out of the gateway. |  |x
| Message Formatter a| Enumeration, one of:

** None
** ActiveXMessageFormatter |  The MSMQ message formatter to use to encode or decode messages. |  |x
| Message Delivery a| Enumeration, one of:

** NoAcknowledgement
** AtLeastOnce |  The message delivery mode when receiving messages from the Gateway. |  |
| Expiration Policy a| ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges instances as it sees fit. |  |
|===


=== MSMQ Connection Type


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Gateway Service Address a| String |  |  |x
| Gateway Access Token a| String |  |  |x
| Queue Name (optional) a| String |  Queue name in UNC Path or FormatName notation, for example `.\private$\myqueue` |  |
| Impersonation Username (optional) a| String |  |  |
| Impersonation Password (optional) a| String |  |  |
| Ignore SSL Warnings a| Boolean |  |  false |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===


==== Associated Sources

* msmq


== MSMQ Sender Configuration


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a|  Msmq
 | The connection Types that can be provided to this configuration. | |x
| Message Formatter a| Enumeration, one of:

** None
** ActiveXMessageFormatter |  The MSMQ message formatter to use to encode or decode messages. |  |x
| Expiration Policy a| ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges instances as it sees fit. |  |
|===

=== MSMQ Connection Type


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Gateway Service Address a| String |  |  |x
| Gateway Access Token a| String |  |  |x
| Queue Name (optional) a| String |  Queue name in UNC Path or FormatName notation, for example `.\private$\myqueue` |  |
| Impersonation Username (optional) a| String |  |  |
| Impersonation Password (optional) a| String |  |  |
| Ignore SSL Warnings a| Boolean |  |  false |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

==== Associated Operations

* send

== Send Operation

`<msmq:send>`

Sends the specified message to the queue.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Queue Name a| String |  |  |
| Message Formatter a| Enumeration, one of:

** None
** ActiveXMessageFormatter |  The message formatter. |  |
| Payload a| Binary |  The message to be sent. |  `#[payload`] |
| Impersonation Username a| String |  (Optional) If entered, the user name of the user to impersonate when accessing the MSMQ. The userName should be in the formats: local computer user: `[username]` or domain user: `[DOMAIN]\[username]`. |  |
| Impersonation Password a| String |  (Optional) If entered, the password of the user to impersonate when accessing the MSMQ. |  |
| Time to be received a| Number |  (Optional) Message lifetime in seconds. 0 means the message does not expire. |  0 |
| Time to reach queue a| Number |  (Optional) Interval in seconds that represents the time a message can take to reach the destination queue from the gateway. 0 means the message does not expire. |  0 |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* msmq-sender-config

=== Throws

* MSMQ:CONNECTIVITY
* MSMQ:RETRY_EXHAUSTED


== Sources

[[msmq]]
=== Msmq

`<msmq:msmq>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Redelivery Policy a| RedeliveryPolicy |  Defines a policy for processing the redelivery of the same message. |  |
| Streaming Strategy a| * repeatable-in-memory-stream
* repeatable-file-store-stream
* non-repeatable-stream |  Configure to use repeatable streams and their behavior. |  |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[cols=".^50%,.^50%"]
|===
|Type a| Any
|Attributes Type a| Any
|===

=== For Configurations

* msmq-receiver-config

== Types

=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * reconnect
* reconnect-forever | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds) | |
| Count a| Number | The number of reconnection attempts to make | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time to allow a dynamic configuration instance to be idle before being eligible to expire. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message. |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
| Object Store a| ObjectStore | The object store where the redelivery counter for each message is going to be stored. |  |
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, which means that a STREAM_MAXIMUM_SIZE_EXCEEDED error occurs when the buffer is full. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory to use. If more memory is used, a STREAM_MAXIMUM_SIZE_EXCEEDED error occurs. A value lower or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it starts to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed. |  |
|===

== See Also

* xref:index.adoc[Microsoft MSMQ Connector Guide]
* xref:windows-gw-services-guide.adoc[Windows Gateway Services Guide]
* https://help.mulesoft.com[MuleSoft Help Center]
